add api nft
