# application/swagger/swagger.yaml
@@ -540,6 +540,60 @@ paths:
             $ref: "#/definitions/ApiResponseError400"
       x-swagger-router-controller: "application.controllers.diplomas_controller"
 
+  /diplomas/nft:
+    post:
+      tags:
+        - "diplomas"
+      summary: "nft diplomas"
+      description: "This api is used to nft diplomas."
+      operationId: "nft_diplomas"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: body
+          name: argument needed
+          schema:
+            type: object
+            required:
+              - diplomas_id
+              - image_data
+            properties:
+              diplomas_id:
+                type: string
+                description: "diplomas_id of the user you want to nft (required)"
+                example: "asdasdasd"
+              nft_diplomas_data:
+                type: object
+                description: "nft_diplomas_data of the user you want to nft (required)"
+                example: "asdasdasd"
+              image_data:
+                type: object
+                description: "image_data of the user you want to nft (required)"
+                example: "asdasdasd"
+      responses:
+        200:
+          description: "Response message after successfully added a user"
+          schema:
+            properties:
+              message:
+                type: string
+                example: "Edit point successfully"
+        401:
+          description: "Unauthorized Request"
+          schema:
+            $ref: "#/definitions/ApiResponseError401"
+        403:
+          description: "Invalid Permission"
+          schema:
+            $ref: "#/definitions/ApiResponseError403"
+        400:
+          description: "User's Error"
+          schema:
+            $ref: "#/definitions/ApiResponseError400"
+      x-swagger-router-controller: "application.controllers.diplomas_controller"
+
   # login
   /login:
     post:
